Fix bugs in Numeral system

BUG: 489660